# the-daily-collage

./: .env.example  .gitignore  API_TESTING_GUIDE.md  ARTICLE_CLASSIFICATION_GUIDE.md  BATCHED_GDELT_GUIDE.md  DYNAMIC_TEMPLATES_GUIDE.md  EMBEDDING_ARCHITECTURE.md  EMBEDDING_DOCS_INDEX.md  EMBEDDING_IMPLEMENTATION_SUMMARY.md  EMBEDDING_LABELING_GUIDE.md  EMBEDDING_QUICK_REFERENCE.md  EMBEDDING_SOLUTION_SUMMARY.md  FINETUNING_SETUP_COMPLETE.md  GETTING_STARTED.md  ONEDAYPLAN.md  ONE_DAY_FINETUNING.md  PROJECT_SUMMARY.md  README.md  README_FINETUNING.md  SESSION_SUMMARY.md  STATUS.md  bootstrap_500.py  demo_embedding_benefits.py  generation_log.txt  index.html  ingestion.Dockerfile  install_dependencies.sh  label_and_train.sh  print_summary.sh  quick-start.sh  quick_start_check.py  setup_venv.sh  test_batched_fetch.py  test_embedding_vs_keywords.py  test_intensity_calibration.py  test_json_loading.py  test_phase2.py  test_pipeline.py  train_full_pipeline.sh  train_one_day.sh  (+2 more)
backend/: pyproject.toml  settings.py
backend/_types/: __init__.py  api.py  signal.py
backend/app/: README.md  main.py
backend/assets/: README.md
backend/ingestion/: README.md  script.py
backend/jobs/: classify_headlines.py  fetch_headlines.py  generate_visualization.py  utils.py
backend/server/: README.md  main.py  pyproject.toml
backend/storage/: __init__.py  cache.py  core.py  factory.py
backend/types/: __init__.py  api.py
backend/utils/: classification.py  generate_layout.py  processing.py  sample_vibes.json
backend/visualization/: __init__.py  assets.py  atmosphere.py  polish.py  (+2 more)
(+104 files in other folders)
