[project]
name = "the-daily-collage"
version = "0.1.0"
description = "REST API server for The Daily Collage visualization system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "uvicorn[standard]>=0.30.0",
    "gdeltdoc",
    "polars",
    "pandas",
    "pydantic>=2.0",
    "gunicorn>=21.0",
    "pillow>=10.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

